terraform/vpc.tf
# VPC — изолированная сеть для проекта
resource "aws_vpc" "main" {
  cidr_block      = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {Name = "${var.project}-vpc"}
}


# Public subnets — в них будет ALB (балансер)
# Надо чтобы было 2+ в разных зонах доступности
resource "aws_subnet" "public_a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "${var.region}a"
  map_public_ip_on_launch = true

  tags = {Name = "${var.project}-public-a"}
}

resource "aws_subnet" "public_b" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "${var.region}b"
  map_public_ip_on_launch = true

  tags = {Name = "${var.project}-public-b"}
}

# gateway, чтобы наш VPC был доступен из интернета
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {Name = "${var.project}-igw"}
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {Name = "${var.project}-public-rt"}
}

resource "aws_route_table_association" "public_a" {
  subnet_id = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
  subnet_id = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}
